--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -75,3 +75,5 @@ set.taken.button=Change book status
 
 book.is.available=Book is available
 book.is.not.available=Book is not available
+
+login.is.taken=This login has already been taken!
