--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,7 +40,10 @@ logged.in.as=Welcome! You have logged in as
 
 add.new.book=Add new book
 delete.book=Delete book
-show.all.books.button=Show all books
+show.all.books.button=Show books
+remove.filters.button=Remove filters
+pages=Pages
+enter.full.book.info.label=Please, fulfill all form's fields
 
 subscription.id=Subscription ID
 arrange.subscription.button=Arrange month subscription
@@ -77,3 +80,15 @@ book.is.available=Book is available
 book.is.not.available=Book is not available
 
 login.is.taken=This login has already been taken!
+
+username.is.invalid=Username may contain only english letters and digits. It has to start with at least one letter. Min: 4 symbols, Max: 15 symbols
+firstName.is.invalid=First name is invalid
+lastName.is.invalid=Last name is invalid
+email.is.invalid=Email is invalid
+phoneNumber.is.invalid=Please, enter phone number in format '+380XXXXXXXXX'
+address.is.invalid=Address should not be blank
+
+librarian.label=Librarian
+admin.label=Admin
+
+error.message.forbidden=Access restricted
